só um pouco melhor mas falta coisa

--- a/style.css
+++ b/style.css
@@ -1,37 +1,119 @@
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+::-webkit-scrollbar {
+  display: none;
+}
+
+:root {
+  --radius: 50px;
+  --sans: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen, ubuntu,
+    cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+:root[color-mode="light"] {
+  --surface1: #e6e6e6;
+  --surface2: #f2f2f2;
+  --surface3: #ffffff;
+  --element1: #111111;
+  --element2: #222222;
+  --element3: #333333;
+  --elementInverse: #eee;
+  --primary: #01408e;
+  --secondary: #3c5d5c;
+  --tertiary: #fff7d6;
+  --box-shadow: 20px 20px 60px #cacaca, -20px -20px 60px #ffffff;
+}
+
+:root[color-mode="dark"] {
+  --surface1: #262626;
+  --surface2: #333333;
+  --surface3: #404040;
+  --element1: #eeeeee;
+  --element2: #dddddd;
+  --element3: #cccccc;
+  --elementInverse: #111;
+  --primary: #8fceff;
+  --secondary: #72faca;
+  --tertiary: #eee8a9;
+  --box-shadow: 20px 20px 60px #1d1d1d, -20px -20px 60px #272727;
+}
+
+:root[color-mode="light"] .color-mode .light--hidden {
+  display: none;
+}
+
+:root[color-mode="dark"] .color-mode .dark--hidden {
+  display: none;
+}
+
+html, body {
+  margin: 0;
+  height: 100%;
+  
+  font-family: var(--sans);
+}
+
+.root {
+  background-color: var(--surface1, #e6e6e6);
+
+  display: grid;
+  grid-template-rows: 10% auto 1fr;
+  gap: 20px;
+  
+  height: 100%;
+
+  font-family: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen, ubuntu, cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
+}
+
+.root, button {
+  color: var(--element1, #111111);
 }
 
 #container {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  display: flex;
+  flex-wrap: wrap; 
+}
 
 .title {
+  display: flex;
+  justify-content: center;
   align-items: center;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 5vmin;
+  gap: 10px; 
+
+  font-size: 48px;
   font-weight: bold;
-  margin-bottom: 50px;  
+
+  text-align: center;
+}
+
+.title button {
+  all: unset;
+}
+
+#filters {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
 }
 
 .filter-btn {
-  min-width: 25%;
-  max-width: 35%;
-  padding: 10px;
-  margin: 10px;
+  padding: 12px 16px;
   font-size: 40px;
   font-weight: bold;
-  background-color: skyblue;
-  border: none;
+  
+  color: var(--element1, #111111);
+  background-color: var(--surface1, #e6e6e6);
+  border-color: var(--primary, #01408e);
+
   border-radius: 5px;
+
   cursor: pointer;
+  
+  transition: all 0.2s ease-in;
 }
 
 .filter-btn:hover {
-  background-color: fuchsia;
+  color: var(--elementInverse, #eee);
+  background-color: var(--primary, #01408e);
 }
 
 .filter-btn.active {
@@ -42,13 +124,19 @@ body {
   background-color: blueviolet;
 }
 
+#samples {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 6px;
+  
+  padding: 6px;
+  overflow: auto;
+}
+
 .sound-btn {
-  min-width: 25%;
-  max-width: 35%;
   padding: 10px;
-  margin: 10px;
   font-size: 35px;
-  background-color: #ccc;
+  background-color: var(--surface2, #404040);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -72,4 +160,45 @@ body {
 
 .audio-player {
   display: none;
+}
+
+.color-mode__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto 1.5rem;
+  font-family: var(--sans);
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1;
+  color: #111111;
+  color: var(--element1, #111111);
+  cursor: pointer;
+  background: none;
+  border: none;
+  border-radius: var(--radius);
+  box-shadow: var(--box-shadow);
+
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.color-mode__btn svg {
+  width: 30px;
+  height: 30px;
+  margin-left: 7px;
+  fill: none;
+  stroke: #222222;
+  stroke: var(--element2, #222222);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 1.5px;
+}
+
+.color-mode__btn:hover svg,
+.color-mode__btn:focus svg, .color-mode__btn:focus {
+  outline: none;
+  fill: #fff7d6;
+  fill: var(--tertiary, #fff7d6);
 }
