--- a/style.css
+++ b/style.css
@@ -2,53 +2,9 @@
   display: none;
 }
 
-:root {
-  --radius: 50px;
-  --sans: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen, ubuntu,
-    cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-:root[color-mode="light"] {
-  --surface1: #e6e6e6;
-  --surface2: #f2f2f2;
-  --surface3: #ffffff;
-  --element1: #111111;
-  --element2: #222222;
-  --element3: #333333;
-  --elementInverse: #eee;
-  --primary: #01408e;
-  --secondary: #3c5d5c;
-  --tertiary: #fff7d6;
-  --box-shadow: 20px 20px 60px #cacaca, -20px -20px 60px #ffffff;
-}
-
-:root[color-mode="dark"] {
-  --surface1: #262626;
-  --surface2: #333333;
-  --surface3: #404040;
-  --element1: #eeeeee;
-  --element2: #dddddd;
-  --element3: #cccccc;
-  --elementInverse: #111;
-  --primary: #8fceff;
-  --secondary: #72faca;
-  --tertiary: #eee8a9;
-  --box-shadow: 20px 20px 60px #1d1d1d, -20px -20px 60px #272727;
-}
-
-:root[color-mode="light"] .color-mode .light--hidden {
-  display: none;
-}
-
-:root[color-mode="dark"] .color-mode .dark--hidden {
-  display: none;
-}
-
 html, body {
   margin: 0;
-  height: 100%;
-  
-  font-family: var(--sans);
+  height: 100%;  
 }
 
 .root {
@@ -91,37 +47,43 @@ html, body {
 #filters {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 4px;
   justify-content: center;
 }
 
 .filter-btn {
-  padding: 12px 16px;
-  font-size: 40px;
+  font-family: 'Press Start 2p';
+  text-align: center;
+	display: inline-block;
+	margin:5px;
   font-weight: bold;
-  
-  color: var(--element1, #111111);
-  background-color: var(--surface1, #e6e6e6);
-  border-color: var(--primary, #01408e);
-
-  border-radius: 5px;
-
+  padding: 10px ;
+  background-color: lightgray;
+  text-shadow: -1px -1px black, 1px 1px white;
+  color: gray;
+	border-radius: 7px;
+  box-shadow: 0 .2em gray; 
   cursor: pointer;
-  
-  transition: all 0.2s ease-in;
+  border: 1px solid black
+}
+
+.filter-btn:active, .filter-btn.active {
+	box-shadow: none;
+	position: relative;
+	top: .2em;
 }
 
 .filter-btn:hover {
-  color: var(--elementInverse, #eee);
-  background-color: var(--primary, #01408e);
+  background-color: #eee;
 }
 
 .filter-btn.active {
-  background-color: orangered;
+  background-color: gray;
+  color: #ddd;
 }
 
 .filter-btn.active:hover {
-  background-color: blueviolet;
+  background-color: lightgray;
 }
 
 #samples {
