--- a/style.css
+++ b/style.css
@@ -5,18 +5,21 @@
 html, body {
   margin: 0;
   height: 100%;  
+  
+}
+
+* {
+  font-family: 'Press Start 2p';
 }
 
 .root {
-  background-color: var(--surface1, #e6e6e6);
+  background: #e6e6e6;
 
   display: grid;
-  grid-template-rows: 10% auto 1fr;
-  gap: 20px;
+  grid-template-rows: 24% auto 1fr;
+  gap: 10px;
   
   height: 100%;
-
-  font-family: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen, ubuntu, cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
 }
 
 .root, button {
@@ -30,11 +33,12 @@ html, body {
 
 .title {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px; 
 
-  font-size: 48px;
+  font-size: 24px;
   font-weight: bold;
 
   text-align: center;
@@ -52,12 +56,11 @@ html, body {
 }
 
 .filter-btn {
-  font-family: 'Press Start 2p';
   text-align: center;
 	display: inline-block;
-	margin:5px;
+	margin: 5px;
   font-weight: bold;
-  padding: 10px ;
+  padding: 10px;
   background-color: lightgray;
   text-shadow: -1px -1px black, 1px 1px white;
   color: gray;
@@ -87,11 +90,10 @@ html, body {
 }
 
 #samples {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 6px;
-  
-  padding: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
   overflow: auto;
 }
 
@@ -125,6 +127,7 @@ html, body {
 }
 
 [class*=push] {
+  padding: 30px;
   position: relative;
   display: inline-block;
   width: 240px;
@@ -136,6 +139,8 @@ html, body {
   border-radius: 50%;
   cursor: pointer;
   transition: box-shadow 200ms;
+  color: rgba(149, 41, 10, 0.7);
+  text-shadow: -1px -1px black;
 }
 
 .push--flat {
@@ -154,11 +159,11 @@ html, body {
   border-radius: 50%;
   transition-duration: 200ms;
 }
-.push--flat:active, .push--flat.is-pushed {
+.push--flat:active, .push--flat.active {
   box-shadow: inset 0 7.5px 0 #da2e0b, inset 0 -7.5px 0 #aa2409, inset 0 0 0 7.5px #b32609, inset 0 0 0 20px #c2290a, inset 0 0 0 24px #611405, inset 0 0 0 28.2352941176px black, inset 0 0 0 32px rgba(247, 133, 110, 0.2), inset 0 0 0 43.6363636364px #b32609, inset 0 96px 32px #9b2108, inset 0 0 24px 40px #791a06, 0 12px 0 rgba(0, 0, 0, 0.3);
   background-color: #b8270a;
 }
-.push--flat:active:after, .push--flat.is-pushed:after {
+.push--flat:active:after, .push--flat.active:after {
   bottom: 28px;
   border-width: 0;
 }
