--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ html, body {
 }
 
 .root {
-  background: #e6e6e6;
+  background: repeating-conic-gradient(from 0deg at 50% 18%, rgb(250, 204, 18, 0.3) 0deg 4.5deg, rgb(255, 139, 34, 0.6) 4.5deg 9deg), #eee;
+  
 
   display: grid;
   grid-template-rows: 24% auto 1fr;
