atualização de 09/junho

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html, body {
   border-radius: 50%;
   cursor: pointer;
   transition: box-shadow 200ms;
-  color: rgba(149, 41, 10, 0.7);
+  color: #FFFFFF;
   text-shadow: -1px -1px black;
 }
 
